# sandbox-fastapi

./: .gitignore  auth.py  controllers.py  create_table.py  db.py  db.sqlite3  intro.py  main.py  models.py  mycalendar.py  mypy.ini  pyproject.toml  run.py  test.db  urls.py
app/: main.py
app/routers/: items.py  users.py
templates/: admin.html  complete.html  detail.html  index.html  layout.html  register.html
tests/: test_intro.py
